syntax = "proto3";

package calculator;
option go_package = "go_project_calc/proto;calculator";

message Instruction {
  string type = 1;
  string op = 2;
  string var = 3;
  string left = 4;
  string right = 5;
}

message ExecuteRequest {
  repeated Instruction instructions = 1;
}

message PrintResult {
  string var = 1;
  int64 value = 2;
}

message ExecuteResponse {
  repeated PrintResult items = 1;
}

service Calculator {
  rpc Execute (ExecuteRequest) returns (ExecuteResponse);
}
